# fabm-medusa

./: README.md  medusa.F90  medusa_pelagic.F90  trcbio_medusa.F90.rtf  trcbio_medusa.txt
medusa/src/: CMakeLists.txt  gas_transfer.F90  medusa_benthic.F90  medusa_carbonate.F90  medusa_ccd.F90  medusa_fast_detritus.F90  medusa_iron_scav.F90  medusa_light.F90  medusa_model_library.F90  medusa_oxygen.F90  medusa_pelagic.F90
medusa/testcases/: fabm-medusa-ersem.yaml  fabm-medusa-original.yaml  fabm-medusa.yaml  fabm_input.nml  iodef_1D.xml  output.yaml
src/: CMakeLists.txt  gas_transfer.F90  medusa_benthic.F90  medusa_carbonate.F90  medusa_ccd.F90  medusa_fast_detritus.F90  medusa_iron_scav.F90  medusa_light.F90  medusa_model_library.F90  medusa_oxygen.F90  medusa_pelagic.F90
testcases/: fabm-medusa-original.yaml
testcases/gotm/: fabm_input.nml  output.yaml
testcases/nemo/: iodef_1D.xml
testcases/python/: simulation.ipynb
